Marka Sayfalar Düzenlendi

--- a/src/resources/l10n/az.json
+++ b/src/resources/l10n/az.json
@@ -609,5 +609,36 @@
     "categoryVan": "Furqon",
     "categoryScooter": "Scooter",
     "maintenanceStart": "Başlamaq",
-    "maintenancePeriod": "Dövr"
+    "maintenancePeriod": "Dövr",
+    "homepage": "Support",
+    "duyurular": "Elan",
+    "urunler": "Məhsullar",
+    "support": "Dəstək",
+    "commandAlarmSensorlevel": "Yüksək: 1 - Aşağı:10",
+    "commandAlarmVibrationlevel": "Titrəmə Həyəcan Həssaslığı",
+    "commandAlarmVibrationon": "Titrəmə Həyəcan Aktiv",
+    "commandAlarmVibrationoff": "Titrəmə Həyəcan Passiv",
+    "attributeUiDisableSms": "SMS Deaktiv",
+    "sharedCopy": "Kopyala",
+    "reportLast1": "Son 1 Saat",
+    "reportLast4": "Son 4 Saat",
+    "mainpageTitle": "Ana Səhifə",
+    "dashboardTitle": "Panel",
+    "bakımisim": "Ad - Yağ Dəyişikliyi, Servis Və S.",
+    "categoryLocked": "Kilidli",
+    "notificationSound": "Tətbiq Bildiriş Səsi",
+    "notificationSoundName": "Səslər",
+    "eventDefault": "Standart",
+    "blokajaciklama":"Avtomobilinizdə Kilidləmə dəsti olmadığı üçün Mühərriki Dayandır və Başlat əmrləri işləməyəcək.",
+    "connecting":"IP-iniz dəyişdi, serverə yenidən qoşulur..",
+    "paketAlert":"Membership Package is about to expire.",
+    "paketAlertgecmis":"Your Membership Package has expired. You need to purchase a renewal package!",
+    "dashboardalert": "Sizin üçün xüsusi Xatırlatmamız olduqda, o, yuxarıda göstəriləcək, Təhlükəsiz Sürün",
+    "last10event": "Son hadisələr",
+    "handleClickHareket": "Dayanacaq statusu peyk əlaqəsindən asılı olaraq gecikmiş görünə bilər.",
+    "handleClickStatus": "Məlumatlar 30 Saniyədə yenilənir.",
+    "handleClickEvents": "Siz cərgəyə klikləməklə tədbir yerlərinə baxa bilərsiniz. Siyahıda bütün avtomobilləriniz üçün son 10 Bildiriş göstərilir.",
+    "handleClickSpeed": "Son 24 saatda sürət pozuntuları olan nəqliyyat vasitələriniz.",
+    "handleClickAlertCard": "Sizin üçün xüsusi bildirişlər və xəbərdarlıqlar göstərilir.",
+    "handleClickTable": "Ödənişlərinizi Takipon.com saytımızın 'FES' > 'Yeniləmə Paketləri' səhifəsindən asanlıqla edə bilərsiniz. Təhlükəsiz qalın!"
 }
