--- a/src/resources/l10n/en.json
+++ b/src/resources/l10n/en.json
@@ -611,5 +611,37 @@
     "categoryVan": "Van",
     "categoryScooter": "Scooter",
     "maintenanceStart": "Start",
-    "maintenancePeriod": "Period"
+    "maintenancePeriod": "Period",
+    "homepage": "Support",
+    "duyurular": "Announcement",
+    "urunler": "Products",
+    "support": "Support",
+    "commandAlarmSensorlevel": "High: 1 - Low:10",
+    "commandAlarmVibrationlevel": "Vibration Alarm Sensitivity",
+    "commandAlarmVibrationon": "Vibration Alarm Active",
+    "commandAlarmVibrationoff": "Vibration Alarm Inactive",
+    "attributeUiDisableSms": "SMS Disabled",
+    "sharedCopy": "Copy",
+    "reportLast1": "Last 1 Hour",
+    "reportLast4": "Last 4 Hours",
+    "mainpageTitle": "Homepage",
+    "dashboardTitle": "Dashboard",
+    "bakımisim": "Name - Oil Change, Service, etc.",
+    "categoryLocked": "Locked",
+    "notificationSound": "App Notification Sound",
+    "notificationSoundName": "Sounds",
+    "eventDefault": "Default",
+    "blokajaciklama":"Since your vehicle does not have an Anti-Lock Kit, the Engine Stop and Start commands will not work.",
+    "connecting":"Your IP has changed, Reconnecting to the server..",
+    "paketAlert":"Membership Package is about to expire.",
+    "paketAlertgecmis":"Your Membership Package has expired. You need to purchase a renewal package!",
+    "dashboardalert": "When we have a special Reminder for you; it will be displayed at the top, We Wish You Safe Driving",
+    "last10event": "Latest Events",
+    "handleClickMotion": "Parking status may appear delayed depending on satellite connection.",
+    "handleClickStatus": "Data is updated every 30 seconds.",
+    "handleClickEvents": "You can view event locations by clicking on the line. The list displays the last 10 notifications for all your vehicles.",
+    "handleClickSpeed": "Your vehicles with speed violations in the last 24 hours.",
+    "handleClickAlertCard": "Your special notifications and warnings are displayed.",
+    "handleClickTable": "You can easily make your payments from the 'FEES' > 'Renewal Packages' page of our Takipon.com website. Stay safe!"
+
 }
