--- a/src/resources/l10n/ru.json
+++ b/src/resources/l10n/ru.json
@@ -609,5 +609,36 @@
     "categoryVan": "Фургон",
     "categoryScooter": "Скутер",
     "maintenanceStart": "Начало",
-    "maintenancePeriod": "Период"
+    "maintenancePeriod": "Период",
+    "homepage": "Support",
+    "duyurular": "Объявление",
+    "urunler": "Продукты",
+    "support": "Поддержка",
+    "commandAlarmSensorlevel": "Высокий: 1 - Низкий:10",
+    "commandAlarmVibrationlevel": "Чувствительность Вибрационной Сигнализации",
+    "commandAlarmVibrationon": "Вибрационная Сигнализация Активна",
+    "commandAlarmVibrationoff": "Вибрационная Сигнализация Неактивна",
+    "attributeUiDisableSms": "SMS Отключено",
+    "sharedCopy": "Копировать",
+    "reportLast1": "Последний 1 Час",
+    "reportLast4": "Последние 4 Часа",
+    "mainpageTitle": "Главная Страница",
+    "dashboardTitle": "Панель Управления",
+    "bakımisim": "Имя - Замена Масла, Сервис и т.д.",
+    "categoryLocked": "Заблокировано",
+    "notificationSound": "Звук Уведомления Приложения",
+    "notificationSoundName": "Звуки",
+    "eventDefault": "По Умолчанию",
+    "blokajaciklama":"Поскольку ваш автомобиль не оснащен комплектом блокировки, команды остановки и запуска двигателя не будут работать.",
+    "connecting": "Ваш IP змінився, повторне підключення до сервера..",
+    "paketAlert":"Membership Package is about to expire.",
+    "paketAlertgecmis":"Your Membership Package has expired. You need to purchase a renewal package!",
+    "dashboardalert": "Когда у нас есть для вас специальное напоминание; будет отображаться вверху. Желаем вам безопасного вождения.",
+    "last10event": "Последние события",
+    "handleClickHareket": "Статус парковки может отображаться с задержкой в ​​зависимости от спутникового соединения.",
+    "handleClickStatus": "Данные обновляются через 30 секунд.",
+    "handleClickEvents": "Вы можете просмотреть места проведения событий, щелкнув строку. В списке отображаются 10 последних уведомлений для всех ваших транспортных средств.",
+    "handleClickSpeed": "Ваши транспортные средства с нарушениями скорости за последние 24 часа.",
+    "handleClickAlertCard": "Для вас отображаются специальные уведомления и оповещения.",
+    "handleClickTable": "Вы можете легко совершать платежи на странице «КОМИССИИ» > «Пакеты продления» нашего веб-сайта Takipon.com. Будьте в безопасности!"
 }
