--- a/src/resources/l10n/tr.json
+++ b/src/resources/l10n/tr.json
@@ -2,9 +2,9 @@
     "sharedLoading": "Yükleniyor...",
     "sharedHide": "Gizle",
     "sharedSave": "Kaydet",
-    "sharedUpload": "Upload",
+    "sharedUpload": "Yükle",
     "sharedSet": "Belirle",
-    "sharedAccept": "Accept",
+    "sharedAccept": "Onayla",
     "sharedCancel": "İptal",
     "sharedCopy": "Copy",
     "sharedAdd": "Ekle",
@@ -12,7 +12,7 @@
     "sharedRemove": "Kaldır",
     "sharedRemoveConfirm": "Öğeyi kaldır",
     "sharedNoData": "Veri yok",
-    "sharedSubject": "Subject",
+    "sharedSubject": "Konu",
     "sharedYes": "Evet",
     "sharedNo": "Hayır",
     "sharedKm": "km",
@@ -47,7 +47,7 @@
     "sharedDrivers": "Sürücüler",
     "sharedDriver": "Sürücü",
     "sharedArea": "Bölge",
-    "sharedSound": "Bildirim sesi",
+    "sharedSound": "Masaüstü Bildirim sesi",
     "sharedType": "Tip",
     "sharedDistance": "Mesafe",
     "sharedHourAbbreviation": "s",
@@ -68,7 +68,7 @@
     "sharedDevice": "Cihaz",
     "sharedTest": "Test",
     "sharedTestNotification": "Deneme bildirimi gönder",
-    "sharedTestNotificators": "Test Kanalları",
+    "sharedTestNotificators": "Bildirim Test",
     "sharedTestExpression": "Test İfadesi",
     "sharedCalendar": "Takvim",
     "sharedCalendars": "Takvimler",
@@ -78,36 +78,36 @@
     "sharedFilterMap": "Haritada Filtrele",
     "sharedSelectFile": "Dosya Seçin",
     "sharedPhone": "Telefon",
-    "sharedRequired": "Gerekli",
+    "sharedRequired": "Zorunlu Alanlar",
     "sharedPreferences": "Özellikler",
     "sharedPermissions": "Yetkiler",
     "sharedConnections": "Bağlantılar",
-    "sharedExtra": "Ekstra",
+    "sharedExtra": "Ek Özellikler",
     "sharedPrimary": "Birincil",
     "sharedSecondary": "İkincil",
-    "sharedTypeString": "Akış",
+    "sharedTypeString": "Metin",
     "sharedTypeNumber": "Sayı",
     "sharedTypeBoolean": "Evet - Hayır",
     "sharedTimezone": "Saat dilimi",
-    "sharedInfoTitle": "Info",
-    "sharedSavedCommand": "Komut Kaydet",
-    "sharedSavedCommands": "Komutları Kaydet",
+    "sharedInfoTitle": "Versiyon",
+    "sharedSavedCommand": "Tanımlı Komutlar",
+    "sharedSavedCommands": "Tanımlı Komutlar",
     "sharedNew": "Yeni",
     "sharedShowAddress": "Adresi Göster",
     "sharedShowDetails": "Daha fazla detay",
     "sharedDisabled": "Devre Dışı",
-    "sharedMaintenance": "Bakım",
+    "sharedMaintenance": "Bakım Hatırlatma",
     "sharedDeviceAccumulators": "Akümülatörler",
     "sharedAlarms": "Alarmlar",
     "sharedLocation": "Konum",
-    "sharedImport": "İçe aktarmak",
+    "sharedImport": "İçe Aktar",
     "sharedColumns": "Sütunlar",
     "sharedDropzoneText": "Bir dosyayı buraya sürükleyip bırakın veya tıklayın",
     "sharedLogs": "Logs",
     "sharedLink": "Link",
     "sharedEmulator": "Emulator",
     "calendarSimple": "Basit",
-    "calendarRecurrence": "Recurrence",
+    "calendarRecurrence": "Tekrarlama Aralığı",
     "calendarOnce": "Bir kere",
     "calendarDaily": "Günlük",
     "calendarWeekly": "Haftalık",
@@ -129,8 +129,8 @@
     "attributeWebReportColor": "Web: Rapor Rengi",
     "attributeDevicePassword": "Araç şifresi",
     "attributeDeviceImage": "Cihaz Resmi",
-    "attributeDeviceInactivityStart": "Device Inactivity Start",
-    "attributeDeviceInactivityPeriod": "Device Inactivity Period",
+    "attributeDeviceInactivityStart": "Araç İnaktivite Başlangıcı",
+    "attributeDeviceInactivityPeriod": "Araç İnaktivite Bitişi",
     "attributeProcessingCopyAttributes": "İşleniyor: Nitelikler Kopyalanıyor",
     "attributeColor": "Renk",
     "attributeWebLiveRouteLength": "Web: Rota Uzunluğu",
@@ -153,16 +153,16 @@
     "attributeUiDisableSavedCommands": "UI: Disable Saved Commands",
     "attributeUiDisableAttributes": "UI: Disable Attributes",
     "attributeUiDisableGroups": "UI: Disable Groups",
-    "attributeUiDisableEvents": "Etkinlikler Devredışı",
-    "attributeUiDisableVehicleFeatures": "UI: Disable Vehicle Features",
-    "attributeUiDisableDrivers": "Görünüm: Sürücüler Devredışı",
-    "attributeUiDisableComputedAttributes": "Görünüm: Hesaplanmış Öznitelikler Devredışı",
-    "attributeUiDisableCalendars": "Görünüm: Takvim Devredışı",
+    "attributeUiDisableEvents": "UI: Etkinlikler Devredışı",
+    "attributeUiDisableVehicleFetures": "UI: Araç Özellikleri Devredışı",
+    "attributeUiDisableDrivers": "UI: Sürücüler Devredışı",
+    "attributeUiDisableComputedAttributes": "UI: Hesaplanmış Öznitelikler Devredışı",
+    "attributeUiDisableCalendars": "UI: Takvim Devredışı",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "Konum Özniteliklerini Gizle",
     "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
-    "attributePopupInfo": "Popup Info",
+    "attributePopupInfo": "Araç Bilgi Kutusu",
     "errorTitle": "Hata",
     "errorGeneral": "Geçersiz parametre veya kısıtlama ihlali",
     "errorConnection": "Bağlantı Hatası",
@@ -172,7 +172,7 @@
     "userPassword": "Şifre",
     "userAdmin": "Yönetici",
     "userRemember": "Hatırla",
-    "userExpirationTime": "Geçersizlik Tarihi",
+    "userExpirationTime": "Bitiş Tarihi",
     "userDeviceLimit": "Cihaz Limiti",
     "userUserLimit": "Kullanıcı Limiti",
     "userDeviceReadonly": "Cihaz Salt Okunur",
@@ -182,16 +182,16 @@
     "userToken": "Kullanıcı Anahtarı",
     "userDeleteAccount": "Hesabı sil",
     "userTemporary": "Temporary",
-    "userTerms": "Terms of Service",
-    "userPrivacy": "Privacy Policy",
-    "userTermsPrompt": "By clicking Accept, you agree to our Terms of Service and confirm that you have read our Privacy Policy.",
-    "userTermsAccepted": "Terms Accepted",
+    "userTerms": "Şartlar ve Koşullar",
+    "userPrivacy": "Gizlilik Politikası",
+    "userTermsPrompt": "Kabul Et'e tıklayarak Hizmet Şartlarımızı kabul etmiş ve Gizlilik Politikamızı okuduğunuzu onaylamış olursunuz.",
+    "userTermsAccepted": "Şartlar Kabul Edildi",
     "loginTitle": "Oturum aç",
-    "loginLanguage": "Lisan",
+    "loginLanguage": "Dil Seçimi",
     "loginReset": "Şifreyi yenile",
     "loginRegister": "Kayıt",
     "loginLogin": "Oturumu aç",
-    "loginOpenId": "Login with OpenID",
+    "loginOpenId": "Google Hesabı",
     "loginFailed": "Geçersiz eposta veya şifre",
     "loginCreated": "Yeni kullanıcı kaydedildi",
     "loginResetSuccess": "E-postanı kontrol et",
@@ -212,14 +212,14 @@
     "deviceLastUpdate": "Son Güncelleme",
     "deviceCommand": "Komut",
     "deviceFollow": "Takip",
-    "deviceTotalDistance": "Toplam Mesafe",
+    "deviceTotalDistance": "Toplam Km",
     "deviceStatus": "Durum",
     "deviceStatusOnline": "Çevrimiçi",
     "deviceStatusOffline": "Çevrimdışı",
     "deviceStatusUnknown": "Bilinmeyen",
     "deviceRegisterFirst": "İlk cihazınızı kaydedin",
     "deviceIdentifierHelp": "IMEI, seri numarası veya diğer kimlik. Tanımlayıcı cihaz raporlarını sunucuyla eşleştirmesi gerekir.",
-    "deviceShare": "Share Device",
+    "deviceShare": "Konum Paylaş",
     "groupDialog": "Grup",
     "groupParent": "Grup",
     "groupNoGroup": "Grupsuz",
@@ -227,7 +227,7 @@
     "settingsUser": "Hesap",
     "settingsGroups": "Gruplar",
     "settingsServer": "Sunucu",
-    "settingsUsers": "Kullanıcı",
+    "settingsUsers": "Kullanıcılar",
     "settingsDistanceUnit": "Uzaklık Birimi",
     "settingsAltitudeUnit": "Rakım Birimi",
     "settingsSpeedUnit": "Hız Birimi",
@@ -241,8 +241,8 @@
     "settingsTotpEnable": "Enable One-time Password",
     "settingsTotpForce": "Force One-time Password",
     "settingsServiceWorkerUpdateInterval": "ServiceWorker Update Interval",
-    "settingsUpdateAvailable": "There is an update available.",
-    "settingsSupport": "Support",
+    "settingsUpdateAvailable": "Yeni Güncelleme Mevcut!!",
+    "settingsSupport": "Canlı DEstek",
     "reportTitle": "Raporlar",
     "reportScheduled": "Planlanmış Raporlar",
     "reportDevice": "Aygıt",
@@ -251,10 +251,10 @@
     "reportTo": "Varış",
     "reportShow": "Göster",
     "reportClear": "Temizle",
-    "linkGoogleMaps": "Google Maps",
-    "linkAppleMaps": "Apple Maps",
-    "linkStreetView": "Street View",
-    "positionFixTime": "Fix Time",
+    "linkGoogleMaps": "Google Maps'te Aç",
+    "linkAppleMaps": "Apple Maps'te Aç",
+    "linkStreetView": "Sokak Görünümü Aç",
+    "positionFixTime": "Son Konum",
     "positionDeviceTime": "Cihaz Saati",
     "positionServerTime": "Sunucu zamanı",
     "positionValid": "Geçerli",
@@ -278,7 +278,7 @@
     "positionPdop": "PDOP",
     "positionSat": "Uydu",
     "positionSatVisible": "Görünür Uydu",
-    "positionRssi": "RSSI",
+    "positionRssi": "GSM Sinyal",
     "positionGps": "GPS",
     "positionRoaming": "Dolaşım",
     "positionEvent": "Etkinlik",
@@ -313,7 +313,7 @@
     "positionCoolantTemp": "Coolant Temperature",
     "positionOperator": "Operatör",
     "positionCommand": "Komut",
-    "positionBlocked": "Bloke Edildi",
+    "positionBlocked": "Blokaj Durum",
     "positionDtcs": "DTCs",
     "positionObdSpeed": "OBD Hız",
     "positionObdOdometer": "OBD Kilometre Sayacı",
@@ -323,19 +323,19 @@
     "positionImage": "Görüntü",
     "positionVideo": "Video",
     "positionAudio": "Ses",
-    "serverTitle": "Sunucu Ayarları",
-    "serverZoom": "Yakınlaştırma",
-    "serverRegistration": "Kayıt",
+    "serverTitle": "Server Title",
+    "serverZoom": "Server Yakınlaştırma",
+    "serverRegistration": "Server Kayıt",
     "serverReadonly": "Sadece Okunur",
     "serverForceSettings": "Zorunlu Ayarlar",
     "serverAnnouncement": "Duyuru",
     "serverName": "Server Name",
     "serverDescription": "Server Description",
-    "serverColorPrimary": "Color Primary",
-    "serverColorSecondary": "Color Secondary",
-    "serverLogo": "Logo Image",
-    "serverLogoInverted": "Inverted Logo Image",
-    "serverChangeDisable": "Disable Server Change",
+    "serverColorPrimary": "Server Color Primary",
+    "serverColorSecondary": "Server Color Secondary",
+    "serverLogo": "Server Logo Image",
+    "serverLogoInverted": "Server Inverted Logo Image",
+    "serverChangeDisable": "Server Disable Change",
     "serverDisableShare": "Disable Device Sharing",
     "serverReboot": "Reboot",
     "mapTitle": "Harita",
@@ -351,7 +351,7 @@
     "mapOpenWeatherWind": "OpenWeather Wind",
     "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Harita Katmanı",
-    "mapCustom": "Özel (XYZ)",
+    "mapCustom": "Trafikli Harita",
     "mapCustomArcgis": "Özel (ArcGIS)",
     "mapCustomLabel": "Özel harita",
     "mapCarto": "Carto Basemaps",
@@ -471,68 +471,52 @@
     "eventQueuedCommandSent": "Queued command sent",
     "eventDeviceMoving": "Cihaz hareket halinde",
     "eventDeviceStopped": "Cihaz hareket etmiyor",
-    "eventDeviceOverspeed": "Hız limiti aşıldı",
+    "eventDeviceOverspeed": "Hız ihlali",
     "eventDeviceFuelDrop": "Yakıt düştü",
     "eventDeviceFuelIncrease": "Yakıt artışı",
     "eventCommandResult": "Komut sonucu",
-    "eventGeofenceEnter": "Coğrafik çite girildi",
-    "eventGeofenceExit": "Coğrafik çitden çıkıldı",
+    "eventGeofenceEnter": "Bölge Girişi",
+    "eventGeofenceExit": "Bölge Çıkışı",
     "eventAlarm": "Alarm",
     "eventIgnitionOn": "Kontak açık",
     "eventIgnitionOff": "Kontak kapalı",
-    "eventMaintenance": "Bakım Gerekli",
+    "eventMaintenance": "Bakım Hatırlatma",
     "eventTextMessage": "Kısa mesaj alındı",
     "eventDriverChanged": "Sürücü değişti",
     "eventMedia": "Media",
     "eventsScrollToLast": "Sona Git",
-    "eventsSoundEvents": "Sound Events",
-    "eventsSoundAlarms": "Sound Alarms",
-    "alarmGeneral": "Genel",
-    "alarmSos": "Acil Yardım",
-    "alarmVibration": "Sarsıntı",
-    "alarmMovement": "Hareket",
-    "alarmLowspeed": "Düşük Hız",
-    "alarmOverspeed": "Aşırı Hız",
-    "alarmFallDown": "Düşmek",
-    "alarmLowPower": "Düşük Güç",
-    "alarmLowBattery": "Düşük pil",
-    "alarmFault": "Arıza",
-    "alarmPowerOff": "Kapalı",
-    "alarmPowerOn": "Çalışıyor",
-    "alarmDoor": "Kapı",
-    "alarmLock": "Kilit acık",
-    "alarmUnlock": "Kilit kapalı",
-    "alarmGeofence": "Coğrafik çit",
-    "alarmGeofenceEnter": "Coğrafik çite girildi",
-    "alarmGeofenceExit": "Coğrafik çitden çıkıldı",
-    "alarmGpsAntennaCut": "GPS Anteni Kes",
+    "eventsSoundEvents": "Olay Türleri",
+    "eventsSoundAlarms": "Alarm Türleri",
+    "alarmVibration": "Titreşim Alarmı",
+    "alarmTow": "Çekici/Çalınma İhtimali",
+    "alarmLowPower": "Akü Voltajı 12V altında",
+    "alarmPowerCut": "Akü Bağlantısı Kesildi",
+    "alarmPowerRestored": "Aküye Bağlandı",
+    "alarmLowBattery": "Düşük Dahili Batarya",
+    "alarmRemoving": "Cihaz Söküldü",
+    "alarmGpsAntennaCut": "GPS Sinyali Yok",
     "alarmAccident": "Kaza",
-    "alarmTow": "Çekme",
-    "alarmIdle": "Çalışmıyor",
-    "alarmHighRpm": "Yüksek devir",
     "alarmHardAcceleration": "Ani Hızlanma",
     "alarmHardBraking": "Ani Yavaşlama",
     "alarmHardCornering": "Sert Viraj",
-    "alarmLaneChange": "Şerit Değiştirme",
-    "alarmFatigueDriving": "Yorgun Sürücü",
-    "alarmPowerCut": "Enerji kesildi",
-    "alarmPowerRestored": "Enerji geldi",
-    "alarmJamming": "Sıkışıklık",
-    "alarmTemperature": "Hararet",
     "alarmParking": "Park halinde",
-    "alarmBonnet": "Kaput",
-    "alarmFootBrake": "Ayak freni",
-    "alarmFuelLeak": "Yakıt sızıntısı",
-    "alarmTampering": "Kurcalama",
-    "alarmRemoving": "Çıkarma",
+    "alarmFatigueDriving": "Yorgun Sürücü",
+    "alarmSos": "Acil SOS Butonu",
+    "alarmFallDown": "Cihaz Düştü(Çocuk Takip)",
+    "alarmFault": "Arıza",
+    "alarmLock": "Kilitlendi(Kapı Sensörü)",
+    "alarmPowerOff": "Güç Kapalı",
+    "alarmPowerOn": "Güç Açık",
+    "alarmMovement": "Hareket Halinde",
+    "alarmLaneChange": "Dorse Değişti",
     "notificationType": "Bildirim tipi",
-    "notificationAlways": "Tüm Cihazlar",
+    "notificationAlways": "Tüm Araçlar",
     "notificationNotificators": "Kanallar",
     "notificatorCommand": "Emir",
     "notificatorWeb": "Web",
     "notificatorMail": "Eposta",
-    "notificatorSms": "SMS Mesajı",
-    "notificatorFirebase": "Firebase",
+    "notificatorSms": "SMS",
+    "notificatorFirebase": "Uygulama",
     "notificatorTraccar": "Traccar",
     "notificatorTelegram": "Telegram",
     "notificatorPushover": "Pushover",
@@ -540,8 +524,8 @@
     "reportCombined": "Kombine",
     "reportRoute": "Rota",
     "reportEvents": "Olaylar",
-    "reportTrips": "Turlar",
-    "reportStops": "Stops",
+    "reportTrips": "Yolculuklar",
+    "reportStops": "Duraklar",
     "reportSummary": "Özet",
     "reportDaily": "Günlük Özet",
     "reportChart": "Grafik",
@@ -563,7 +547,7 @@
     "reportDeviceName": "Cihaz İsmi",
     "reportAverageSpeed": "Ortalama Hız",
     "reportMaximumSpeed": "En Fazla Hız",
-    "reportEngineHours": "Motor Saatleri",
+    "reportEngineHours": "Motor Çalışma Saati",
     "reportStartEngineHours": "Start Engine Hours",
     "reportEndEngineHours": "End Engine Hours",
     "reportDuration": "Süre",
@@ -608,6 +592,37 @@
     "categoryTruck": "Kamyon",
     "categoryVan": "Van",
     "categoryScooter": "Mobilet",
-    "maintenanceStart": "Başlat",
-    "maintenancePeriod": "Dönem"
+    "maintenanceStart": "İlk Bakım",
+    "maintenancePeriod": "Bildirim Periyodu",
+    "homepage": "Support",
+    "duyurular": "Duyuru",
+    "urunler": "Ürünler",
+    "support": "Destek",
+    "commandAlarmSensorlevel": "Yüksek: 1 - Düşük:10 ",
+    "commandAlarmVibrationlevel": "Titreşim Alarm Hassasiyeti",
+    "commandAlarmVibrationon": "Titreşim Alarm Aktif",
+    "commandAlarmVibrationoff": "Titreşim Alarm Pasif",
+    "attributeUiDisableSms": "SMS Devre Dışı",
+    "sharedCopy": "Kopyala",
+    "reportLast1": "Son 1 Saat",
+    "reportLast4": "Son 4 Saat",
+    "mainpageTitle": "Ana Sayfa ",
+    "dashboardTitle": "Ana Sayfa",
+    "bakımisim": "Ad - Yağ Değişimi, Servis Vb.",
+    "categoryLocked": "Locked",
+    "notificationSound": "Uygulama Bildirim Sesi",
+    "notificationSoundName": "Sesler",
+    "eventDefault": "Varsayılan",
+    "blokajaciklama":"Aracınızda Blokaj Kiti mevcut olmadığından Motor Durdurma ve Başlatma komutları çalışmayacaktır.",
+    "connecting":"IP'niz değişti, 10 Saniye içerisinde Sunucuya yeniden Bağlanacak...",
+    "paketAlert":"Paket Data süresi dolmak üzere.",
+    "paketAlertgecmis":"Paket kart süreniz dolmuş. Yenileme paketi satın almanız gereklidir!",
+    "dashboardalert": "Size özel bir Hatırlatmamız olduğunda; en üstte görüntülenecek. Güvenli Sürüşler Dileriz!",
+    "last10event": "Son Olaylar",
+    "handleClickMotion": "Park durumu Uydu bağlantısına göre gecikmeli görünebilmektedir.",
+    "handleClickStatus": "Veriler 30 Saniyede güncellenmektedir.",
+    "handleClickEvents": "Olay konumlarını satıra tıklayarak görüntüleyebilirsiniz. Listede tüm araçlarınızla ilgili son 10 Bildirim görüntülenmektedir.",
+    "handleClickSpeed": "Son 24 Saate Hız İhlalinde bulunan araçlarınız.",
+    "handleClickAlertCard": "Size özel bildirimler ve uyarılar görüntülenmektedir.",
+    "handleClickTable": "Ödeme işlemlerinizi Takipon.com sitemizin 'ÜCRETLER' > 'Yenileme Paketleri' sayfasından kolaylıkla gerçekleştirebilirsiniz. Güvenle kalın!"
 }
