--- a/src/resources/l10n/uk.json
+++ b/src/resources/l10n/uk.json
@@ -609,5 +609,36 @@
     "categoryVan": "Фургон",
     "categoryScooter": "Скутер",
     "maintenanceStart": "Початок",
-    "maintenancePeriod": "Період"
+    "maintenancePeriod": "Період",
+    "homepage": "Support",
+    "duyurular": "Оголошення",
+    "urunler": "Продукти",
+    "support": "Підтримка",
+    "commandAlarmSensorlevel": "Високий: 1 - Низький:10",
+    "commandAlarmVibrationlevel": "Чутливість Вібраційної Сигналізації",
+    "commandAlarmVibrationon": "Вібраційна Сигналізація Активна",
+    "commandAlarmVibrationoff": "Вібраційна Сигналізація Неактивна",
+    "attributeUiDisableSms": "SMS Вимкнено",
+    "sharedCopy": "Копіювати",
+    "reportLast1": "Остання 1 Година",
+    "reportLast4": "Останні 4 Години",
+    "mainpageTitle": "Головна Сторінка",
+    "dashboardTitle": "Панель Управління",
+    "bakımisim": "Назва - Заміна Оливи, Сервіс тощо.",
+    "categoryLocked": "Заблоковано",
+    "notificationSound": "Звук Сповіщення Додатка",
+    "notificationSoundName": "Звуки",
+    "eventDefault": "За Замовчуванням",
+    "blokajaciklama":"Оскільки ваш автомобіль не має комплекту блокування, команди зупинки двигуна та запуску не працюватимуть.",
+    "connecting": "Ваш IP змінився, повторне підключення до сервера..",
+    "paketAlert":"Membership Package is about to expire.",
+    "paketAlertgecmis":"Your Membership Package has expired. You need to purchase a renewal package!",
+    "dashboardalert": "Коли ми маємо для вас спеціальне нагадування; буде відображатися вгорі, Бажаємо вам безпечного водіння.",
+    "last10event": "Останні події",
+    "handleClickHareket": "Статус паркування може відображатися із затримкою залежно від супутникового з'єднання.",
+    "handleClickStatus": "Дані оновлюються за 30 секунд.",
+    "handleClickEvents": "Ви можете переглянути місця подій, клацнувши рядок. Список відображає останні 10 сповіщень для всіх ваших транспортних засобів.",
+    "handleClickSpeed": "Ваші транспортні засоби з порушеннями швидкості за останні 24 години",
+    "handleClickAlertCard": "Для вас відображаються спеціальні сповіщення та сповіщення.",
+    "handleClickTable": "Ви можете легко здійснювати свої платежі зі сторінки 'КОМІСІЇ' > 'Пакети поновлення' нашого веб-сайту Takipon.com. Будьте в безпеці!"
 }
