--- a/src/resources/l10n/de.json
+++ b/src/resources/l10n/de.json
@@ -609,5 +609,36 @@
     "categoryVan": "Van",
     "categoryScooter": "Roller",
     "maintenanceStart": "Start",
-    "maintenancePeriod": "Periode"
+    "maintenancePeriod": "Periode",
+    "homepage": "Support",
+    "duyurular": "Ankündigung",
+    "urunler": "Produkte",
+    "support": "Support",
+    "commandAlarmSensorlevel": "Hoch: 1 - Niedrig:10",
+    "commandAlarmVibrationlevel": "Vibrationsalarm-Empfindlichkeit",
+    "commandAlarmVibrationon": "Vibrationsalarm Aktiv",
+    "commandAlarmVibrationoff": "Vibrationsalarm Inaktiv",
+    "attributeUiDisableSms": "SMS Deaktiviert",
+    "sharedCopy": "Kopieren",
+    "reportLast1": "Letzte 1 Stunde",
+    "reportLast4": "Letzte 4 Stunden",
+    "mainpageTitle": "Startseite",
+    "dashboardTitle": "Dashboard",
+    "bakımisim": "Name - Ölwechsel, Service usw.",
+    "categoryLocked": "Gesperrt",
+    "notificationSound": "App-Benachrichtigungston",
+    "notificationSoundName": "Töne",
+    "eventDefault": "Standard",
+    "blokajaciklama":"Da Ihr Fahrzeug nicht über ein Lockout-Kit verfügt, funktionieren die Befehle zum Stoppen und Starten des Motors nicht.",
+    "connecting":"Ihre IP hat sich geändert, die Verbindung zum Server wird wiederhergestellt.",
+    "paketAlert":"Membership Package is about to expire.",
+    "paketAlertgecmis":"Your Membership Package has expired. You need to purchase a renewal package!",
+    "dashboardalert": "Wenn wir eine besondere Erinnerung für Sie haben, wird diese oben angezeigt: Gute Fahrt.",
+    "last10event": "Latest Events",
+    "handleClickMotion": "Parking status may appear delayed depending on satellite connection.",
+    "handleClickStatus": "Data is updated every 30 seconds.",
+    "handleClickEvents": "You can view event locations by clicking on the line. The list displays the last 10 notifications for all your vehicles.",
+    "handleClickSpeed": "Your vehicles with speed violations in the last 24 hours.",
+    "handleClickAlertCard": "Your special notifications and warnings are displayed.",
+    "handleClickTable": "You can easily make your payments from the 'FEES' > 'Renewal Packages' page of our Takipon.com website. Stay safe!"
 }
