Event Sunucu Zamanı Gösterimi

--- a/src/resources/l10n/tr.json
+++ b/src/resources/l10n/tr.json
@@ -6,7 +6,7 @@
     "sharedSet": "Belirle",
     "sharedAccept": "Onayla",
     "sharedCancel": "İptal",
-    "sharedCopy": "Copy",
+    "sharedCopy": "Kopyala",
     "sharedAdd": "Ekle",
     "sharedEdit": "Düzenle",
     "sharedRemove": "Kaldır",
@@ -150,11 +150,13 @@
     "attributeMailSmtpAuth": "Eposta: SMTP Parola Etkin",
     "attributeMailSmtpUsername": "Eposta: SMTP Kullanıcı Adı",
     "attributeMailSmtpPassword": "Eposta: SMTP Şifre",
+    "attributeNavigationAppLink": "Navigasyon app link",
+    "attributeNavigationAppTitle": "Navigasyon app title",
     "attributeUiDisableSavedCommands": "UI: Disable Saved Commands",
     "attributeUiDisableAttributes": "UI: Disable Attributes",
     "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Etkinlikler Devredışı",
-    "attributeUiDisableVehicleFetures": "UI: Araç Özellikleri Devredışı",
+    "attributeUiDisableVehicleFeatures": "UI: Araç Özellikleri Devredışı",
     "attributeUiDisableDrivers": "UI: Sürücüler Devredışı",
     "attributeUiDisableComputedAttributes": "UI: Hesaplanmış Öznitelikler Devredışı",
     "attributeUiDisableCalendars": "UI: Takvim Devredışı",
@@ -603,7 +605,6 @@
     "commandAlarmVibrationon": "Titreşim Alarm Aktif",
     "commandAlarmVibrationoff": "Titreşim Alarm Pasif",
     "attributeUiDisableSms": "SMS Devre Dışı",
-    "sharedCopy": "Kopyala",
     "reportLast1": "Son 1 Saat",
     "reportLast4": "Son 4 Saat",
     "mainpageTitle": "Ana Sayfa ",
