Link paylaşımına saat eklendi, Bildirim sayfası kategoriler filtrelendi. vite bazı ayarlar yapıldı

--- a/src/resources/l10n/tr.json
+++ b/src/resources/l10n/tr.json
@@ -219,8 +219,8 @@
     "deviceStatusOnline": "Çevrimiçi",
     "deviceStatusOffline": "Çevrimdışı",
     "deviceStatusUnknown": "Bilinmeyen",
-    "deviceRegisterFirst": "İlk cihazınızı kaydedin",
-    "deviceIdentifierHelp": "IMEI, seri numarası veya diğer kimlik. Tanımlayıcı cihaz raporlarını sunucuyla eşleştirmesi gerekir.",
+    "deviceRegisterFirst": "Cihaz Satın Almak veya Aktivasyon için Canlı Destek Bölümünden Bizimle İletişime Geçin",
+    "deviceIdentifierHelp": "IMEI, seri numarası veya diğer kimlik.",
     "deviceShare": "Konum Paylaş",
     "groupDialog": "Grup",
     "groupParent": "Grup",
@@ -244,7 +244,7 @@
     "settingsTotpForce": "Force One-time Password",
     "settingsServiceWorkerUpdateInterval": "ServiceWorker Update Interval",
     "settingsUpdateAvailable": "Yeni Güncelleme Mevcut!!",
-    "settingsSupport": "Canlı DEstek",
+    "settingsSupport": "Canlı Destek",
     "reportTitle": "Raporlar",
     "reportScheduled": "Planlanmış Raporlar",
     "reportDevice": "Aygıt",
@@ -474,8 +474,8 @@
     "eventDeviceMoving": "Cihaz hareket halinde",
     "eventDeviceStopped": "Cihaz hareket etmiyor",
     "eventDeviceOverspeed": "Hız ihlali",
-    "eventDeviceFuelDrop": "Yakıt düştü",
-    "eventDeviceFuelIncrease": "Yakıt artışı",
+    "eventDeviceFuelDrop": "Yakıt Hızla Azalıyor",
+    "eventDeviceFuelIncrease": "Yakıt Dolduruluyor",
     "eventCommandResult": "Komut sonucu",
     "eventGeofenceEnter": "Bölge Girişi",
     "eventGeofenceExit": "Bölge Çıkışı",
@@ -490,11 +490,11 @@
     "eventsSoundEvents": "Olay Türleri",
     "eventsSoundAlarms": "Alarm Türleri",
     "alarmVibration": "Titreşim Alarmı",
-    "alarmTow": "Çekici/Çalınma İhtimali",
+    "alarmTow": "Çekici İhtimali",
     "alarmLowPower": "Akü Voltajı 12V altında",
     "alarmPowerCut": "Akü Bağlantısı Kesildi",
     "alarmPowerRestored": "Aküye Bağlandı",
-    "alarmLowBattery": "Düşük Dahili Batarya",
+    "alarmLowBattery": "Dahili Batarya Azalıyor",
     "alarmRemoving": "Cihaz Söküldü",
     "alarmGpsAntennaCut": "GPS Sinyali Yok",
     "alarmAccident": "Kaza",
