Akü Voltak kelimesi

--- a/src/resources/l10n/tr.json
+++ b/src/resources/l10n/tr.json
@@ -271,7 +271,7 @@
     "positionDistance": "Mesafe",
     "positionRpm": "RPM",
     "positionFuel": "Yakıt",
-    "positionPower": "Güç",
+    "positionPower": "Akü Voltaj",
     "positionBattery": "Batarya",
     "positionRaw": "Ham",
     "positionIndex": "Indeks",
