Status kart, son hareket eklendi, Map simgeleri büyütüldü, Replaypage açılama eklendi, Bildirim sayfası sms düzenendi

--- a/src/resources/l10n/tr.json
+++ b/src/resources/l10n/tr.json
@@ -186,7 +186,7 @@
     "userTemporary": "Temporary",
     "userTerms": "Şartlar ve Koşullar",
     "userPrivacy": "Gizlilik Politikası",
-    "userTermsPrompt": "Kabul Et'e tıklayarak Hizmet Şartlarımızı kabul etmiş ve Gizlilik Politikamızı okuduğunuzu onaylamış olursunuz.",
+    "userTermsPrompt": "Giriş yaparak Hizmet Şartlarımızı kabul etmiş ve Gizlilik Politikamızı okuduğunuzu onaylıyor musunuz?",
     "userTermsAccepted": "Şartlar Kabul Edildi",
     "loginTitle": "Oturum aç",
     "loginLanguage": "Dil Seçimi",
@@ -219,7 +219,7 @@
     "deviceStatusOnline": "Çevrimiçi",
     "deviceStatusOffline": "Çevrimdışı",
     "deviceStatusUnknown": "Bilinmeyen",
-    "deviceRegisterFirst": "Cihaz Satın Almak veya Aktivasyon için Canlı Destek Bölümünden Bizimle İletişime Geçin",
+    "deviceRegisterFirst": "Cihaz Satın Almak veya Aktivasyon için;Sağ Alt Köşeden AYARLAR>DESTEK Bölümünden Bizimle İletişime Geçin",
     "deviceIdentifierHelp": "IMEI, seri numarası veya diğer kimlik.",
     "deviceShare": "Konum Paylaş",
     "groupDialog": "Grup",
@@ -256,7 +256,7 @@
     "linkGoogleMaps": "Google Maps'te Aç",
     "linkAppleMaps": "Apple Maps'te Aç",
     "linkStreetView": "Sokak Görünümü Aç",
-    "positionFixTime": "Son Konum",
+    "positionFixTime": "Son Hareket",
     "positionDeviceTime": "Cihaz Saati",
     "positionServerTime": "Sunucu zamanı",
     "positionValid": "Geçerli",
@@ -604,7 +604,7 @@
     "commandAlarmVibrationlevel": "Titreşim Alarm Hassasiyeti",
     "commandAlarmVibrationon": "Titreşim Alarm Aktif",
     "commandAlarmVibrationoff": "Titreşim Alarm Pasif",
-    "attributeUiDisableSms": "SMS Devre Dışı",
+    "attributeUiDisableSms": "SMS Aktivasyon",
     "reportLast1": "Son 1 Saat",
     "reportLast4": "Son 4 Saat",
     "mainpageTitle": "Ana Sayfa ",
@@ -617,7 +617,7 @@
     "blokajaciklama":"Aracınızda Blokaj Kiti mevcut olmadığından Motor Durdurma ve Başlatma komutları çalışmayacaktır.",
     "connecting":"IP'niz değişti, 10 Saniye içerisinde Sunucuya yeniden Bağlanacak...",
     "paketAlert":"Paket Data süresi dolmak üzere.",
-    "paketAlertgecmis":"Paket kart süreniz dolmuş. Yenileme paketi satın almanız gereklidir!",
+    "paketAlertgecmis":"Paket süreniz dolmuş. Yenileme paketi satın almanız gereklidir!",
     "dashboardalert": "Size özel bir Hatırlatmamız olduğunda; en üstte görüntülenecek. Güvenli Sürüşler Dileriz!",
     "last10event": "Son Olaylar",
     "handleClickMotion": "Park durumu Uydu bağlantısına göre gecikmeli görünebilmektedir.",
